k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ms-name
  name: ms-name
  namespace: default
spec:
  ports:
  - name: ms-name
    port: 80
    targetPort: service-port
    protocol: TCP
  selector:
    component: ms-name
