k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: ms-name-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/x-forwarded-proto: "https"   
spec:
  rules:
  - host: {HOST}
    http:
      paths:
      - path: /ns-ms-name
        pathType: Prefix
        backend:
          service:
            name: ms-name-api
            port:
              number: 80
  tls:
  - hosts:
    - {HOST}
    secretName: ms-name-api-tls
